# MilkBottle

./: .coverage  .gitignore  .sourcery.yaml  .venvmilker.json  CHANGELOG.md  FUTURE-TODOO.md  MILKBOTTLE_CODEBASE_CLEANUP_SUMMARY.md  MILKBOTTLE_PHASE4_1_ADVANCED_ANALYTICS_SUMMARY.md  MILKBOTTLE_PHASE4_1_PROGRESS_SUMMARY.md  MILKBOTTLE_PHASE4_2_EXTENSIBILITY_SUMMARY.md  README.md  TASKLIST.md  grobid-docker-compose.yml  pyproject.toml  requirements-plugin-system.txt
.githooks/: pre-push.sh
REVIEW_TASKLIST/: REVIEWTASKLIST.md
docs/MilkBottle/: ARCHITECTURE.md  BOTTLE-ARCHITECTURE.md  BOTTLE-CHEATSHEET.md  CHANGELOG  DEPLOYMENT_SYSTEM.md  DIRECTORYTREE.md  MENU-EXAMPLES.md  MILKBOTTLE_INTEGRATION_PROGRESS.md  MILKBOTTLE_MAIN_APPLICATION_ENHANCEMENT.md  MILKBOTTLE_MODULE_INTEGRATION_STANDARD.md  MILKBOTTLE_PHASE2_COMPLETION_SUMMARY.md  MILKBOTTLE_PHASE3_COMPLETION_SUMMARY.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_MARKETPLACE.md
docs/PDFmilker/: ARCHITECTURE.md  DIRECTORYTREE.md  PDF-ARCHITECTURE.md  PDF-DIRECTORYTREE.md  PDF-TASKLIST.md  PDFMILKER_ANALYSIS_ENHANCEMENTS.md  PDFMILKER_CODE_ENHANCEMENT_ANALYSIS.md  PDFMILKER_CODE_REVIEW.md  PDFMILKER_ENHANCEMENTS_IMPLEMENTED.md  PDFMILKER_ENHANCEMENT_SUMMARY.md  PDFMILKER_PHASE2_IMPLEMENTATION_SUMMARY.md  PDFTASKLIST.md
src/: rich_directory_tree_src.md  tree_generator.py
tests/: test_advanced_analytics.py  test_api_server.py  test_configuration_integration.py  test_deployment_system.py  test_enhanced_features.py  test_enhanced_registry.py  test_enterprise_features.py  test_example_plugin.py  test_export_menu.py  test_integration_phase2.py  test_performance_optimization.py  test_phase3_features.py  test_phase4_features.py  test_phase5_integration.py  test_plugin_integration.py  test_plugin_marketplace.py  test_plugin_sdk.py  test_plugin_system.py  test_structured_logging.py
tools/: milkbottle_skeleton.py  venvmilker_directory_gen.py
(+168 files in other folders)
